# c

./: .gitignore  CMakeLists.txt  af_match.c  binary_tree.c  bruteforce_match.c  bubblesort.c  calc_diagonal_matriz.c  dec_to_bin_stack.c  deque_struct.c  deque_struct_main.c  fat_rec.c  hash_table.c  heap.c  insertionsort.c  josephus.c  linked_list_struct.c  linked_list_struct_main.c  linked_list_vector.c  main.c  mergesort.c  pilha_valida_parenteses.c  ponteiro.c  queue_struct.c  queue_struct_main.c  queue_vector.c  quicksort.c  radixsort.c  revisao_estrutura_dados.c  selectionsort.c  stack_struct.c  stack_struct_main.c  stack_vector.c  stack_vector_main.c  valida_expressao.c
