# cmake_minimum_required(VERSION <specify CMake version here>)
project(Projects C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(fat_rec.c fat_rec.c)
add_executable(calc_diagonal_matriz.c calc_diagonal_matriz.c)
add_executable(linked_list_struct_main.c linked_list_struct_main.c)
add_executable(linked_list_vector.c linked_list_vector.c)
add_executable(stack_struct_main.c stack_struct_main.c)
add_executable(stack_vector_main.c stack_vector_main.c)
add_executable(queue_vector.c queue_vector.c)
add_executable(queue_struct_main.c queue_struct_main.c)
add_executable(valida_expressao.c valida_expressao.c)
add_executable(hash_table.c hash_table.c)
add_executable(deque_struct_main.c deque_struct_main.c)
add_executable(binary_tree.c binary_tree.c)
add_executable(bubblesort.c bubblesort.c)
add_executable(selectionsort.c selectionsort.c)